--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,3 +1,8 @@
+# shell
+#set -g -x PATH /usr/bin $PATH
+#set -g default-command /usr/bin/fish
+#set -g default-shell /usr/bin/fish
+
 # Basic
 set -g default-terminal "screen-256color"
 set -g terminal-overrides 'xterm:colors=256'
