edit vim plugins dein.toml

--- a/vim/rc/dein.toml
+++ b/vim/rc/dein.toml
@@ -5,3 +5,9 @@ repo = 'Shougo/dein.vim'
 [[plugins]]
 repo = 'itchyny/lightline.vim'
 
+[[plugins]]
+repo = 'TOwnk/vim-autoclose'
+
+[[plugins]]
+repo = 'scrooloose/syntastic'
+
