--- a/vim/rc/dein.toml
+++ b/vim/rc/dein.toml
@@ -12,4 +12,4 @@ repo = 'Townk/vim-autoclose'
 repo = 'tomasr/molokai'
 
 [[plugins]]
-repo = 'scrooloose/syntastic'
+repo = 'scrooloose/synstastic'
