--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,7 +1,7 @@
 # shell
-#set -g -x PATH /usr/bin $PATH
-#set -g default-command /usr/bin/fish
-#set -g default-shell /usr/bin/fish
+# set -g -x PATH /usr/bin $PATH
+set -g default-command /usr/bin/fish
+set -g default-shell /usr/bin/fish
 
 # Basic
 set -g default-terminal "screen-256color"
