--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -87,3 +87,5 @@ set  -g pane-active-border-fg    colour172
 ## アクティブ Paneの背景色
 set  -g pane-active-border-bg    colour8
 
+## theme
+run-shell "~/.tmux/themes/nord-tmux/nord.tmux"
