--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -39,43 +39,39 @@ bind - split-window -v
 bind | split-window -h
 
 # moving window
-bind-key -n C-S-Left  swap-window -t -1
-bind-key -n C-S-Right swap-window -t +1
+# bind-key -n C-S-Left  swap-window -t -1
+# bind-key -n C-S-Right swap-window -t +1
+bind < swap-window -t -1
+bind > swap-window -t +1
 
-# status line
-## left
-set -g status-left-length 40
-set-option -g status-left "\
-#[bg=colour148]#[fg=colour234] #S:#I.#P \
-#[bg=colour054]#[fg=colour255] $USER@#h"
-
-## right
-set-option -g status-right "\
-#[fg=colour240]#[fg=colour255]#[bg=colour240]\
-%Y/%m/%d(%a) %H:%M "
-
-
-## center
-set -g pane-border-bg colour0
-set -g pane-border-fg colour238
-set -g pane-active-border-bg colour0
-set -g pane-active-border-fg colour119
-
-set -g status-position bottom
-set -g status-justify "left"
-set -g status-bg colour234
-
-setw -g window-status-current-bg colour239
-setw -g window-status-current-attr bold
-setw -g window-status-current-format '\
-#[fg=colour239]#[bg=colour234]#[bg=colour239]#[fg=colour119]\
- #I#[fg=colour249]:#[fg=colour255]#W#[fg=colour249]\
-#F#[fg=colour239]#[bg=colour234]'
-
-setw -g window-status-fg colour244
-setw -g window-status-bg colour234
-setw -g window-status-attr none
-setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
+# # status line <--- nord 使うことになった
+# ## left
+# set -g status-left-length 40
+# set-option -g status-left "\
+# #[bg=colour148]#[fg=colour234] #S:#I.#P \
+# #[bg=colour054]#[fg=colour255] $USER@#h"
+# ## right
+# set-option -g status-right "\
+# #[fg=colour240]#[fg=colour255]#[bg=colour240]\
+# %Y/%m/%d(%a) %H:%M"
+# ## center
+# set -g pane-border-bg colour0
+# set -g pane-border-fg colour238
+# set -g pane-active-border-bg colour0
+# set -g pane-active-border-fg colour119
+# set -g status-position bottom
+# set -g status-justify "left"
+# set -g status-bg colour234
+# setw -g window-status-current-bg colour239
+# setw -g window-status-current-attr bold
+# setw -g window-status-current-format '\
+# #[fg=colour239]#[bg=colour234]#[bg=colour239]#[fg=colour119]\
+#  #I#[fg=colour249]:#[fg=colour255]#W#[fg=colour249]\
+# #F#[fg=colour239]#[bg=colour234]'
+# setw -g window-status-fg colour244
+# setw -g window-status-bg colour234
+# setw -g window-status-attr none
+# setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
 
 # split 境界線の色
 ## Paneの文字色
