--- a/vim/rc/dein_lazy.toml
+++ b/vim/rc/dein_lazy.toml
@@ -1,3 +1,9 @@
 [[plugins]]
 repo = "davidhalter/jedi-vim"
 on_ft = ['python']
+hook_add = '''
+  let g:jedi#popup_select_first = 0 
+  let g:jedi#popup_on_dot = 0
+  autocmd FileType python setlocal completeopt-=preview
+  let g:jedi#completions_command = "<C-N>"
+'''
