[Update] .tmux.conf, 境界線の色を変更した

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -48,15 +48,16 @@ bind | split-window -h -c '#{pane_current_path}'
 bind < swap-window -t -1
 bind > swap-window -t +1
 
-# split 境界線の色
-## Paneの文字色
-set  -g pane-border-fg           colour8
-## Paneの背景色
-set  -g pane-border-bg           colour8
-## アクティブPaneの文字色
-set  -g pane-active-border-fg    colour172
-## アクティブ Paneの背景色
-set  -g pane-active-border-bg    colour8
-
-## theme
+# theme
 run-shell "~/.tmux/themes/nord-tmux/nord.tmux"
+
+# split 境界線の色
+## Paneの境界字色
+set  -g pane-border-fg           colour12
+## Paneの境界背景色
+set  -g pane-border-bg           colour0
+## アクティブPaneの境界色
+set  -g pane-active-border-fg    colour228
+## アクティブ Paneの境界背景色
+set  -g pane-active-border-bg    colour0
+
