[Update] vimrc, supertabの補完方向の変更

--- a/vim/rc/dein.toml
+++ b/vim/rc/dein.toml
@@ -2,10 +2,11 @@
 [[plugins]]
 repo = 'Shougo/dein.vim'
 
+# vimの見た目。ステータスバーとか。
 [[plugins]]
 repo = 'itchyny/lightline.vim'
 
-
+# カッコ補完
 [[plugins]]
 repo = 'cohama/lexima.vim'
 
