--- a/vim/rc/dein.toml
+++ b/vim/rc/dein.toml
@@ -53,10 +53,10 @@ repo = 'jmcantrell/vim-virtualenv'
 # コード補間
 [[plugins]]
 repo = "davidhalter/jedi-vim"
-on_ft = ['python']
-hook_add = '''
-  let g:jedi#popup_on_dot = 0
-  let g:jedi#popup_select_first = 0 
-  autocmd FileType python setlocal completeopt-=preview
-  let g:jedi#completions_command = "<C-N>"
-'''
+# on_ft = ['python']
+# hook_add = '''
+#   let g:jedi#popup_on_dot = 0
+#   let g:jedi#popup_select_first = 0 
+#   autocmd FileType python setlocal completeopt-=preview
+#   let g:jedi#completions_command = "<C-N>"
+# '''
