--- a/vim/rc/dein.toml
+++ b/vim/rc/dein.toml
@@ -53,3 +53,14 @@ repo = 'jmcantrell/vim-virtualenv'
 # fugitive
 [[plugins]]
 repo = 'tpope/vim-fugitive'
+
+# コード補間
+[[plugins]]
+repo = "davidhalter/jedi-vim"
+on_ft = ['python']
+hook_add = '''
+  let g:jedi#popup_on_dot = 0
+  let g:jedi#popup_select_first = 0 
+  autocmd FileType python setlocal completeopt-=preview
+  let g:jedi#completions_command = "<C-N>"
+'''
