--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,17 +1,17 @@
-# shell
+# # shell
 # set -g -x PATH /usr/bin $PATH
-set -g default-command /usr/bin/fish
-set -g default-shell /usr/bin/fish
-
+# set -g default-command /usr/bin/fish
+# set -g default-shell /usr/bin/fish
+# 
 # Basic
 set -g default-terminal "screen-256color"
 set -g terminal-overrides 'xterm:colors=256'
 set -g status-interval 1
-
+# 
 # mause
 set -g mouse on
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
-
+# 
 # vim
 set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi v send-keys -X begin-selection
@@ -26,12 +26,12 @@ bind -r H resize-pane -L 5
 bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
-
+# 
 # change prefixkey
 set-option -g prefix C-f
 unbind-key C-b
 bind-key C-g send-prefix
-
+# 
 # 分割
 ## prefix + -で水平分割
 bind - split-window -v
@@ -53,11 +53,11 @@ run-shell "~/.tmux/themes/nord-tmux/nord.tmux"
 
 # split 境界線の色
 ## Paneの境界字色
-set  -g pane-border-fg           colour12
+# set  -g pane-border-fg           colour12
 ## Paneの境界背景色
-set  -g pane-border-bg           colour0
+# set  -g pane-border-bg           colour0
 ## アクティブPaneの境界色
-set  -g pane-active-border-fg    colour228
+# set  -g pane-active-border-fg    colour229
 ## アクティブ Paneの境界背景色
-set  -g pane-active-border-bg    colour0
+# set  -g pane-active-border-bg    colour0
 
