--- a/vim/rc/dein.toml
+++ b/vim/rc/dein.toml
@@ -31,8 +31,8 @@ repo = 'Shougo/vimfiler'
 repo = 'ryanoasis/vim-devicons'
 
 # 静的コードチェック
-[[plugins]]
-repo = 'w0rp/ale'
+# [[plugins]]
+# repo = 'w0rp/ale'
 
 # indent可視化
 [[plugins]]
@@ -55,9 +55,9 @@ repo = 'jmcantrell/vim-virtualenv'
 repo = 'tpope/vim-fugitive'
 
 # コード補間
-[[plugins]]
-repo = "davidhalter/jedi-vim"
-on_ft = ['python']
+# [[plugins]]
+# repo = "davidhalter/jedi-vim"
+# on_ft = ['python']
 # hook_add = '''
 #   let g:jedi#popup_on_dot = 0
 #   let g:jedi#popup_select_first = 0 
@@ -73,3 +73,15 @@ repo = 'alvan/closetag.vim'
 
 [[plugins]]
 repo = 'posva/vim-vue'
+
+[[plugins]]
+repo = 'prabirshrestha/vim-lsp'
+
+[[plugins]]
+repo = 'mattn/vim-lsp-settings'
+
+[[plugins]]
+repo = 'prabirshrestha/asyncomplete.vim'
+
+[[plugins]]
+repo = 'prabirshrestha/asyncomplete-lsp.vim'
