[update] .tmux.conf, swap-window and previous

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -12,7 +12,7 @@ set -g status-interval 1
 set -g mouse on
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 # 
-# vim
+# vi
 set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
@@ -45,8 +45,8 @@ bind | split-window -h -c '#{pane_current_path}'
 # moving window
 # bind-key -n C-S-Left  swap-window -t -1
 # bind-key -n C-S-Right swap-window -t +1
-bind < swap-window -t -1
-bind > swap-window -t +1
+bind < swap-window -t -1 \; previous-window
+bind > swap-window -t +1 \; next-window
 
 # theme
 run-shell "~/.tmux/themes/nord-tmux/nord.tmux"
