--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -11,8 +11,8 @@ set -g status-interval 1
 # mause
 set -g mouse on
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
-# 
-# vi
+
+# vim
 set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
@@ -26,12 +26,12 @@ bind -r H resize-pane -L 5
 bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
-# 
+
 # change prefixkey
 set-option -g prefix C-f
 unbind-key C-b
 bind-key C-g send-prefix
-# 
+
 # 分割
 ## prefix + -で水平分割
 bind - split-window -v
