[update] tmuxのデフォルトシェルをfishに

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -2,6 +2,7 @@
 # set -g -x PATH /usr/bin $PATH
 # set -g default-command /usr/bin/fish
 # set -g default-shell /usr/bin/fish
+set-option -g default-shell /usr/local/bin/fish
 # 
 # Basic
 set -g default-terminal "screen-256color"
