windows内のwslでubuntuで使えるようにした。

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,8 +1,14 @@
+#!/bin/sh
 # # shell
 # set -g -x PATH /usr/bin $PATH
 # set -g default-command /usr/bin/fish
 # set -g default-shell /usr/bin/fish
-set-option -g default-shell /usr/local/bin/fish
+# fish があれば fish を、なければ bash をデフォルトシェルにする
+if-shell "command -v fish >/dev/null 2>&1" \
+  'set-option -g default-shell /usr/bin/fish' \
+  'set-option -g default-shell /bin/bash'
+
+
 # 
 # Basic
 set -g default-terminal "screen-256color"
@@ -50,7 +56,8 @@ bind < swap-window -t -1 \; previous-window
 bind > swap-window -t +1 \; next-window
 
 # theme
-run-shell "~/.tmux/themes/nord-tmux/nord.tmux"
+# run-shell "~/.tmux/themes/nord-tmux/nord.tmux"
+run-shell "cd $HOME/.tmux/themes/nord-tmux && ./nord.tmux"
 
 # split 境界線の色
 ## Paneの境界字色
@@ -62,3 +69,17 @@ run-shell "~/.tmux/themes/nord-tmux/nord.tmux"
 ## アクティブ Paneの境界背景色
 # set  -g pane-active-border-bg    colour0
 
+
+# tpmプラグインマネージャのパス
+# set -g @plugin 'tmux-plugins/tpm'
+
+# ここに他のプラグインを追加可能
+# 例: erikw/tmux-powerline
+# set -g @plugin 'erikw/tmux-powerline'
+
+
+# set -g @plugin "arcticicestudio/nord-tmux"
+# set -g @plugin "nordtheme/tmux"
+
+# tpmを初期化
+# run '~/.tmux/plugins/tpm/tpm'
